[tool.poetry]
name = "proxer"
version = "1.1.3"
description = "A public tool to extract the public proxies available through surface web"
authors = ["Ahmed Elshahat <58784045+MrStarkEG@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
